package org.main_java.deNexus_project.repos.samples_repos;

import org.main_java.deNexus_project.domain.samples.CyberAttackSample;
import org.springframework.data.jpa.repository.JpaRepository;

public interface CyberAttackSampleRepository extends JpaRepository<CyberAttackSample, Long> {

}
