package org.main_java.deNexus_project.repos.samples_repos;

import org.main_java.deNexus_project.domain.samples.Sample;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

import java.util.List;

@Repository
public interface SampleRepository extends JpaRepository<Sample, Long> {
    List<Sample> findByExperimentId(Long experimentId);
}


