package org.main_java.deNexus_project.repos.samples_repos;

import org.main_java.deNexus_project.domain.samples.SecurityIncidentSample;
import org.springframework.data.jpa.repository.JpaRepository;

public interface SecurityIncidentSampleRepository extends JpaRepository<SecurityIncidentSample, Long> {
}
